# rag-pipeline

./: .gitignore  README.md  compare_embeddings.py  create_database.py  main.py  pyproject.toml  query_data.py  test_document.md
.github/: copilot-instructions.md
data/books/: gardens_of_the_moon.md
frontend/: index.html  script.js
project-scripts/: cost_monitoring.py  optimized_rag.py  query_cost_estimation.py
src/: query_data.py  vector_db.py
