[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG pipeline for providing feedback on markdown documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0", 
    "langchain-openai>=0.2.0",
    "unstructured[md]>=0.15.0",
    "chromadb>=0.5.0",
    "openai>=1.35.0",
    "tiktoken>=0.7.0",
    "ruff>=0.12.5",
]
